* Apply patch from Joseph E. Sacco to support libnotify-0.4
* Default all open and save file choosers to user's home dir
* When not showing file browser, add button now allows selection of files or folders.
* Notionally split out data CD and DVD so they are both available in the File->New menu.
* Tidy up the start burning dlg and make the layouts look better.

Version 0.5.1

* Fix copying and disk detection when the cd reader is also the writer.
* Fix devices_mount as it only works in english locales.
* Attempt to enable large file support (>2GB) using AC_SYS_LARGEFILE.
* Apply patch #1329223 Escaping song names
* Apply patch #1328125 Patch to make Desktop file more compliant
* Fix the progress dialog so when you are viewing output it scrolls to the bottom properly.
* Show burning progress in the main window title so when you minimise the app you can see when it's finished.
* Apply patch #1329438 Fix exec layer in 64bit architecures
* Apply patch #1328641 Fix build on GNU/kFreeBSD
* Apply patch #1329831 Updated pt_BR translation
* Use valgrind to fix minor memory leaks.
* Remember the last selected data and audio disk sizes.
* Add raw96r write mode.
* Fix up datacd sizes according to cdrfaq.org
* Refactor the start burn dialog so that burning a data disk won't pop up loads of dialogs.
* Unmount devices using the device node rather than the mount point.
* Apply patch #1385469 Change default tempdir location
* Apply patch #1389004 fixed File Browser show/hide logic
* Fix bug #1385461 Default tempdir location doesn´t work for a second user
* Fix bug #1221654 Interface not usable from keyboard
* Fix bug #1252914 'delete' key should work in Disk tabs
* Fix bug #1336559 Gnomebaker asks for an empty disk when there is one inserted
* Apply patch #1333284 Patch for GNU Build System - Brian Pepple
* Apply patch from Bjoern Schiessle to export m3u and pls playlists.
* Apply patch from gamehack to use GOption for parsing startup arguments.